# MultimediaProcessingLabs

Lab_1/: Pentagram.py  Task_2.py  Task_3.py  Task_4.py  Task_5.py  Task_6.py  Task_7.py  Task_8.py  Task_9.py
Lab_2/: Lab_2.docx  Lab_2.py
Lab_3/: Lab_3.docx  Lab_3_Task_1.py  Lab_3_Task_2.py  Lab_3_Tasks_3_4_5_Final.py  Lab_3_Tasks_3_4_5_Grayscale.py
Lab_3/cpp/: CMakeLists.txt  make.bat
Lab_3/cpp/src/: gauss.cpp
Lab_4/: Lab_4.docx  Lab_4.py
Lab_4/cpp/: CMakeLists.txt
Lab_4/cpp/src/: canny.cpp
Lab_5/: Lab_5.docx  Lab_5.py  OpenCV Contour Features.url  OpenCV Contours Getting Started.url  OpenCV Contours Hierarchy.url
Lab_6/: Lab_6.docx  Lab_6_CNN.ipynb  Lab_6_MLP.ipynb  Lab_6_MLP_3_layers.ipynb
Lab_6/checkpoints/CNN/: attempt_1.txt  attempt_2.txt  attempt_3.txt
Lab_6/checkpoints/CNN/attempt_1/: ckpt_128_epoch_01.keras  ckpt_128_epoch_05.keras  ckpt_128_epoch_07.keras  ckpt_128_epoch_09.keras  ckpt_128_epoch_12.keras  ckpt_128_epoch_16.keras  ckpt_128_epoch_20.keras  ckpt_128_epoch_22.keras  ckpt_128_epoch_24.keras  ckpt_128_epoch_29.keras  ckpt_128_epoch_30.keras
Lab_6/checkpoints/CNN/attempt_2/: ckpt_128_epoch_01.keras  ckpt_128_epoch_02.keras  ckpt_128_epoch_03.keras  ckpt_128_epoch_04.keras  ckpt_128_epoch_05.keras  ckpt_128_epoch_06.keras  ckpt_128_epoch_08.keras  ckpt_128_epoch_12.keras  ckpt_128_epoch_13.keras  ckpt_128_epoch_15.keras  ckpt_128_epoch_16.keras  ckpt_128_epoch_18.keras  ckpt_128_epoch_19.keras  ckpt_128_epoch_25.keras  ckpt_128_epoch_26.keras  ckpt_128_epoch_27.keras  ckpt_128_epoch_29.keras  (+1 more)
Lab_6/drawing/: main.py
(+8 files in other folders)
